correção para deploy

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-# Dependências essenciais para AI-Cop Face Recognition API
+# Dependências essenciais para AI-Cop 
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 requests>=2.31.0
 python-dotenv>=1.0.0
 python-multipart>=0.0.6
+
 
 # Face Recognition
 face-recognition>=1.3.0
