--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-multipart>=0.0.6
 
 
 # Face Recognition
+--only-binary dlib
 face-recognition>=1.3.0
 Pillow>=10.1.0
 dlib>=19.24.0
@@ -15,3 +16,4 @@ scipy>=1.11.0
 
 # Opcional para melhor performance
 opencv-python>=4.8.0
+
