--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,6 +8,12 @@ nixPkgs = [
   "xorg.libX11"
 ]
 
+nixLibraryPath = [
+  "${pkgs.lapack}/lib",
+  "${pkgs.openblas}/lib",
+  "${pkgs.xorg.libX11}/lib"
+]
+
 [phases.install]
 nixEnvVars = {
   DLIB_USE_CUDA = "0",
