--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,16 +1,22 @@
-# Configuração do Nixpacks para instalar CMake
 [phases.setup]
-nixPkgs = ["python3", "gcc", "cmake", "pkg-config"]
-
-[phases.install]
-cmds = [
-    "python -m venv --copies /opt/venv",
-    ". /opt/venv/bin/activate && pip install --upgrade pip",
-    ". /opt/venv/bin/activate && pip install -r requirements.txt"
+nixPkgs = [
+  "python3",
+  "gcc",
+  "cmake",
+  "lapack",
+  "openblas",
+  "xorg.libX11",
+  "libglib",
+  "libpng",
+  "libjpeg",
+  "zlib",
+  "libxext",
+  "libsm",
+  "libice"
 ]
 
-[phases.start]
-cmd = "python main.py"
-
-[variables]
-NIXPACKS_PATH = "/opt/venv/bin:$NIXPACKS_PATH"
+[phases.install]
+nixEnvVars = {
+  DLIB_USE_CUDA = "0",  
+  USE_AVX_INSTRUCTIONS = "1"
+}
