--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -16,7 +16,4 @@ nixPkgs = [
 ]
 
 [phases.install]
-nixEnvVars = {
-  DLIB_USE_CUDA = "0",  
-  USE_AVX_INSTRUCTIONS = "1"
-}
+nixEnvVars = { DLIB_USE_CUDA = "0", USE_AVX_INSTRUCTIONS = "1" }
