--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,19 +1,14 @@
 [phases.setup]
-nixPkgs = [
-  "python3",
-  "gcc",
-  "cmake",
-  "lapack",
-  "openblas",
-  "xorg.libX11",
-  "glib",
-  "libpng",
-  "libjpeg",
-  "zlib",
-  "xorg.libXext",
-  "xorg.libSM",
-  "xorg.libICE"
-]
-
+nixPkgs = ["python3", "gcc", "cmake", "pkg-config"]
 [phases.install]
-nixEnvVars = { DLIB_USE_CUDA = "0", USE_AVX_INSTRUCTIONS = "1" }
+cmds = [
+"python -m venv --copies /opt/venv",
+". /opt/venv/bin/activate && pip install --upgrade pip",
+". /opt/venv/bin/activate && pip install -r
+requirements.txt"
+]
+[phases.start]
+cmd = "python main.py"
+[variables]
+NIXPACKS_PATH = "/opt/venv/bin:$NIXPACKS_PATH"
+
